# redsk-py

./: .gitignore  client_main.py  pyproject.toml  server_main.py
client/: gui.py  pyproject.toml  utils.py
client/screens/: non_game.py
client/src/client/: drawing.py  gui.py  main.py
client/src/client/screens/: __init__.py  draw_state.py  drawing.py  game.py  non_game.py
common/: networking.py  protocol.py  pyproject.toml
common/src/common/: game_state.py  hex.py  networking.py  protocol.py
server/: pyproject.toml
server/src/server/: game.py  main.py
