[project]
name = "server"
version = "0.1.0"
description = "redsk-py server application"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "common",
]

[tool.uv.sources]
common = { path = "../common/", editable = true }

[build-system]
requires = ["uv_build>=0.11.7,<0.12"]
build-backend = "uv_build"
